Fix horizontal scrollbar, grid styling

--- a/web/frontend/src/stylesheets/getstarted.css
+++ b/web/frontend/src/stylesheets/getstarted.css
@@ -1,12 +1,12 @@
 .getStarted {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   text-shadow: 1px 1px 2px black;
 }
 
 .getStartedContainer {
   height: 50vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .title1 {
@@ -26,7 +26,7 @@
 
 #quickGlance {
   height: 50vh;
-  width: 100vw;
+  width: 100%;
 }
 
 section {
