--- a/web/frontend/src/stylesheets/landing.css
+++ b/web/frontend/src/stylesheets/landing.css
@@ -11,7 +11,7 @@
 
 #sidebar {
   position: fixed;
-  right: 1%;
+  right: 5%;
   top: 15%;
   color: rgba(241, 235, 247, 0.85);
   font-size: 1.2em;
